<resources>
    //APP NAME
    <string name="app_name">Easy Schedules</string>

    //REGISTER LAYOUT
    //Buttons
    <string name="ContinueButton">Continue</string>
    //Labels
    <string name="FirstNameLB">First Name</string>
    <string name="LastNameLB">Last Name</string>
    <string name="UsernameLB">Username</string>
    <string name="PasswordLB">Password</string>
    <string name="EmailLB">Email Address</string>
    <string name="PhoneNumberLB">Phone Number</string>
    <string name="Title">Create an employee account</string>
    <string name="CompanyCode">Enter Company Code</string>
    //Links
    <string name="ExisitingAccount">Already have an account? Login</string>

    //LOGIN LAYOUT
    //Buttons
    <string name="LoginButton">Login</string>
    //Labels
    <string name="LoginLB">Login</string>
    <string name="UsernameOrEmailLB">Username or Email Address</string>
    <string name="PasswordLoginLB">Password</string>
    //Links
    <string name="RegisterUser">Register new user account</string>
    <string name="RegisterOwner">Register new business owner account</string>
    <string name="title_activity_join_business">JoinBusinessActivity</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_connect">Connect</string>
    <string name="nav_dms">Direct Message</string>
    <string name="availableshifts">Available Shifts</string>
    <string name="CreateSchedule">Create Schedules</string>
    <string name="ManageEmployees">Manage Employees</string>
    <string name="ManageCompany">Manage Company</string>
    <string name="CurrentWeek">Current Weeks Schedule</string>
    <string name="NextWeek">Upcoming Weeks Schedule</string>
    <string name="CreateScheduleTitle">Create new shift for schedule</string>
    <string name="UserID">Employees ID</string>
    <string name="Month">Month</string>
    <string name="Day">Day</string>
    <string name="StartTime">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="Submit">Submit</string>
    <string name="Time">Time</string>
    <string name="SelectMonth">Select Month</string>
    <string name="SelectDay">Select Day</string>
    <string name="SelectDate">Select Date</string>
    <string name="AvailableShifts">Available Shifts</string>
    <string name="TitleBusinessOwner">Create a business owner account</string>
    <string name="TitleRegisterCompany">Register Company Information</string>
    <string name="CompanyName">Company Name</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Zipcode">Zipcode</string>
    <string name="TypeOfBusiness">Type of Business</string>
    <string name="GeneratedCompanyCode">Company Code</string>
    <string name="SubmitButton">Submit</string>
    <string name="CompanyNameLB">Company name label</string>
    <string name="PendingShifts">Pending Shifts</string>
    <string name="PendingShift">Pending Shift</string>
    <string name="CreateMessage">Create Message</string>
    <string name="ViewMessageWall">View Message Wall</string>
    <string name="customjobtitles">Custom Job Titles</string>
    <string name="CreateCustomJobTitles">Create Custom Job Titles</string>
    <string name="CustomJobTitles">Create Custom Job Titles</string>
    <string name="AssignJobTitle">Assign Job Titles</string>
    <string name="AssignButton">Assign</string>
    <string name="JobTitle">Job Title</string>
    <string name="User"> Users </string>

</resources>
