<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context=".activity.CreateScheduleActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/EndTimeLB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:text="@string/EndTime"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/EndTimeTF"
        app:layout_constraintEnd_toStartOf="@+id/EndTimeTF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EndTimeTF" />

    <TextView
        android:id="@+id/StartTimeLB"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="215dp"
        android:gravity="center"
        android:text="@string/StartTime"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toStartOf="@+id/StartTimeTF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SelectDateButton" />

    <TextView
        android:id="@+id/DayLB"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="145dp"
        android:gravity="center"
        android:text="@string/Day"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EndTimeTF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MonthLB"
        app:layout_constraintTop_toBottomOf="@+id/EmployeeIdLB" />

    <TextView
        android:id="@+id/MonthLB"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/Month"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/DayLB"
        app:layout_constraintEnd_toStartOf="@+id/DayLB"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CreateShiftTitle"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="44dp"
        android:text="@string/CreateScheduleTitle"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EmployeeIdLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="134dp"
        android:text="@string/UserID"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmployeeIdTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/EmployeeIdLB"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/StartTimeTF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/StartTime"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/StartTimeLB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StartTimeLB" />

    <TextView
        android:id="@+id/EndTimeTF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="4dp"
        android:text="@string/EndTime"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EndTimeLB"
        app:layout_constraintTop_toBottomOf="@+id/StartTimeTF" />

    <Button
        android:id="@+id/SelectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="34dp"
        android:text="@string/SelectDate"
        app:layout_constraintStart_toEndOf="@+id/EmployeeIdLB"
        app:layout_constraintTop_toBottomOf="@+id/EmployeeIdTF" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        app:itemIconTint="@drawable/bottom_nav_color_selector"
        app:itemTextColor="@drawable/bottom_nav_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/admin_schedule_items" />

</android.support.constraint.ConstraintLayout>