<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context=".activity.ConnectActivity">

    <Button
        android:id="@+id/CCJTButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="23dp"
        android:text="@string/CreateCustomJobTitles"
        app:layout_constraintBottom_toTopOf="@+id/AJTButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MCButton"
        tools:text="@string/CreateCustomJobTitles" />

    <Button
        android:id="@+id/MCButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="26dp"
        android:text="@string/ViewMessageWall"
        app:layout_constraintBottom_toTopOf="@+id/CCJTButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ViewMessageWall" />

    <Button
        android:id="@+id/AJTButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="321dp"
        android:text="@string/AssignJobTitle"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CCJTButton" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        app:itemIconTint="@drawable/bottom_nav_color_selector"
        app:itemTextColor="@drawable/bottom_nav_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AJTButton"
        app:menu="@menu/admin_nav_items" />
</android.support.constraint.ConstraintLayout>